--- a/Interactive-1.ipynb
+++ b/Interactive-1.ipynb
@@ -6,6 +6,13 @@
    "source": [
     "[Select a kernel](command:_notebook.selectKernel) to run cells."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -15,7 +22,8 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
